@@ -194,7 +194,7 @@ public:
     void setNumberingFootNoteType(KWFootNoteVariable::Numbering _type) { m_footEndNote.numberingType = _type; }
     bool selectAllFrames( bool select );
 
-    void createTextBox(const KoRect & rect );
+    KCommand * createTextBox(const KoRect & rect );
 
 protected:
     void applyGrid( KoPoint &p );
