@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="75">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="76">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Action name="extra_template"/>
@@ -103,6 +103,7 @@
   <Separator/>
   <Action name="frame_stylist"/>
   <Action name="create_framestyle"/>
+  <Action name="convert_to_text_box"/>
   <Action name="frame_stylemenu"/>
   <!--<Action name="border_color"/> Can't do that while we're sharing the action with paragraphs-->
   <Action name="border_backgroundcolor"/>
